change put to patch and update api docs
